Realign java11 with main and set Java 11 toolchain