@@ -4,8 +4,9 @@ import com.acmecorp.orders.domain.OrderStatus;
 import com.acmecorp.orders.service.OrderService;
 import com.acmecorp.orders.web.OrderRequest;
 import com.acmecorp.orders.web.OrderResponse;
+import com.acmecorp.orders.web.OrderStatusHistoryResponse;
 import com.acmecorp.orders.web.PageResponse;
-import javax.validation.Valid;
+import jakarta.validation.Valid;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
@@ -16,9 +17,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.Executors;
-import java.util.concurrent.ExecutorService;
-import java.util.concurrent.Future;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/orders")
@@ -39,8 +37,9 @@ public class OrdersController {
     }
 
     @PostMapping
-    public ResponseEntity<OrderResponse> createOrder(@Valid @RequestBody OrderRequest request) {
-        var order = orderService.createOrder(request);
+    public ResponseEntity<OrderResponse> createOrder(@Valid @RequestBody OrderRequest request,
+                                                     @RequestHeader(value = "Idempotency-Key", required = false) String idempotencyKey) {
+        var order = orderService.createOrder(request, idempotencyKey);
         return ResponseEntity.ok(OrderResponse.from(order));
     }
 
@@ -56,15 +55,18 @@ public class OrdersController {
         return orderService.toResponse(orderService.getOrder(id));
     }
 
+    @GetMapping("/{id}/history")
+    public List<OrderStatusHistoryResponse> history(@PathVariable("id") Long id) {
+        return orderService.history(id);
+    }
+
     @GetMapping
     public PageResponse<OrderResponse> listOrders(@RequestParam(name = "customerEmail", required = false) String customerEmail,
                                                   @RequestParam(name = "status", required = false) OrderStatus status,
                                                   @RequestParam(name = "page", defaultValue = "0") int page,
                                                   @RequestParam(name = "size", defaultValue = "20") int size) {
         var ordersPage = orderService.listOrders(customerEmail, status, page, size);
-        var responses = ordersPage.getContent().stream()
-                .map(OrderResponse::from)
-                .collect(Collectors.toList());
+        var responses = ordersPage.getContent().stream().map(OrderResponse::from).toList();
         return PageResponse.from(new PageImpl<>(responses, PageRequest.of(page, size), ordersPage.getTotalElements()));
     }
 
@@ -96,14 +98,8 @@ public class OrdersController {
 
     @PostMapping("/seed")
     public Map<String, Object> seed() {
-        List<OrderRequest> demoRequests = List.of(
-                new OrderRequest("seed+1@acme.test", List.of(new OrderRequest.Item("SKU-1", 1)), OrderStatus.NEW),
-                new OrderRequest("seed+2@acme.test", List.of(new OrderRequest.Item("SKU-2", 2)), OrderStatus.CONFIRMED),
-                new OrderRequest("seed+3@acme.test", List.of(new OrderRequest.Item("SKU-3", 1)), OrderStatus.CANCELLED)
-        );
-
-        var seeded = orderService.seedDemoData(demoRequests);
-        int count = (seeded == null || seeded.isEmpty()) ? demoRequests.size() : seeded.size();
+        var seeded = orderService.seedDemoData();
+        int count = seeded == null ? 0 : seeded.size();
         return Map.of(
                 "seeded", true,
                 "count", count
@@ -115,17 +111,11 @@ public class OrdersController {
                                                             @RequestParam(name = "status", required = false) OrderStatus status,
                                                             @RequestParam(name = "page", defaultValue = "0") int page,
                                                             @RequestParam(name = "size", defaultValue = "20") int size) throws ExecutionException, InterruptedException {
-        ExecutorService executor = Executors.newSingleThreadExecutor();
-        try {
-            Future<Page<com.acmecorp.orders.domain.Order>> task =
-                    executor.submit(() -> orderService.listOrders(customerEmail, status, page, size));
+        try (var executor = Executors.newVirtualThreadPerTaskExecutor()) {
+            var task = executor.submit(() -> orderService.listOrders(customerEmail, status, page, size));
             var ordersPage = task.get();
-            var responses = ordersPage.getContent().stream()
-                    .map(OrderResponse::from)
-                    .collect(Collectors.toList());
+            var responses = ordersPage.getContent().stream().map(OrderResponse::from).toList();
             return new PageImpl<>(responses, PageRequest.of(page, size), ordersPage.getTotalElements());
-        } finally {
-            executor.shutdown();
         }
     }
 }
